hw12_13_14_15_calendar/manifests/charts/templates/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
spec:
  rules:
    - host: minikube
      http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 8080
